# softhill-odoo-telegram

./: .gitignore  README.md  pyproject.toml
api_framework/: __init__.py  auth.py  routes.py
bot_framework/: __init__.py  channel_guard.py  odoo_client.py  telegram_auth.py
mcp_server/: server.py
odoo_module/telegram_base/: __manifest__.py
odoo_module/telegram_base/models/: __init__.py  res_users.py  telegram_chat.py
odoo_module/telegram_base/security/: ir.model.access.csv  telegram_security.xml
telegram_api/: __manifest__.py
telegram_api/controllers/: api.py
telegram_base/: __manifest__.py
telegram_base/data/: telegram_data.xml  telegram_profile_data.xml
telegram_base/models/: __init__.py  res_config_settings.py  res_users.py  telegram_chat.py  telegram_user_profile.py
telegram_base/security/: ir.model.access.csv  telegram_groups.xml
telegram_base/views/: res_config_settings_views.xml  res_users_views.xml  telegram_chat_views.xml  telegram_user_profile_views.xml
telegram_bot/: __manifest__.py
telegram_bot/controllers/: webhook.py
telegram_bot/data/: telegram_tools_core_data.xml  telegram_tools_data.xml
telegram_bot/models/: __init__.py  ai_chat.py  ai_chat_core.py  telegram_bot.py  telegram_chat_ext.py  telegram_message.py  telegram_pending_action.py  telegram_tool.py
telegram_bot/security/: ir.model.access.csv
telegram_bot/views/: telegram_analytics_views.xml  telegram_bot_dashboard.xml  telegram_chat_ext_views.xml  telegram_message_views.xml  telegram_tool_views.xml
telegram_mcp/: __manifest__.py
telegram_mcp/controllers/: mcp.py
(+2 files in other folders)
